fixed overflow problem

--- a/src/app.css
+++ b/src/app.css
@@ -22,7 +22,7 @@ body {
 
 ::-webkit-scrollbar {
     width: 5px;
-    height: 2px;
+    height: 3px;
 }
 
 ::-webkit-scrollbar-thumb {
